--- a/ikea_e2201.yaml
+++ b/ikea_e2201.yaml
@@ -54,7 +54,7 @@ blueprint:
           multiple: false
     # inputs for custom actions
     action_button_up_short:
-      name: (Optional) Up button short press
+      name: (Optional) Up button short press test
       description: Action to run on short up button press.
       default: []
       selector:
