--- a/ikea_e2201.yaml
+++ b/ikea_e2201.yaml
@@ -47,6 +47,9 @@ blueprint:
             - integration: zha
               manufacturer: IKEA of Sweden
               model: RODRET wireless dimmer
+            - integration: zha
+              manufacturer: IKEA of Sweden
+              model: RODRET Dimmer
             # source: https://github.com/dresden-elektronik/deconz-rest-plugin/blob/8ae69a976bca13f22e8002a13ebe798d1e26c086/button_maps.json#L236
             - integration: deconz
               manufacturer: IKEA of Sweden
@@ -54,7 +57,7 @@ blueprint:
           multiple: false
     # inputs for custom actions
     action_button_up_short:
-      name: (Optional) Up button short press test
+      name: (Optional) Up button short press
       description: Action to run on short up button press.
       default: []
       selector:
